Fix overflow of some featured items

--- a/wwm_rubik_style.scss
+++ b/wwm_rubik_style.scss
@@ -242,6 +242,7 @@ div#toolbar div.toolbar-shortcuts ul {
     .view-content {
       display: flex;
       flex-flow: row wrap;
+      overflow: auto;
     }
 
     .views-row {
